# learning-webassembly

./: .gitignore  CMakeLists.txt  CMakePresets.json  readme.md
.devcontainer/: Dockerfile  devcontainer.json
src/: bench.cpp  bench_opencv.cpp  hello.cpp
web/: bench_js.js  bench_wasm_glue.js  camera.html  camera.js  hello_index.html  index.html
web/wasm/: bench_wasm.js  hello_wasm.js  hello_wasm.wasm
